--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "repository": "https://github.com/SidneyNemzer/forms",
   "dependencies": {
     "backbone": "^1.3.3",
+    "backbone.localstorage": "^1.1.16",
     "frontend-dependencies": "^0.2.1",
     "jquery": "^3.1.1",
     "requirejs": "^2.3.3",
@@ -20,7 +21,8 @@
     "packages": [
       "jquery/dist/*",
       "underscore",
-      "backbone"
+      "backbone",
+      "backbone.localstorage/*.js"
     ]
   }
 }
